--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,6 +14,7 @@ spring:
   data:
     mongodb:
       uri: ${MONGODB_URI_LOCAL}
+      database: ${MONGODB_DATABASE}
 
 jwt:
   secretKey: ${JWT_SECRET_KEY}
@@ -23,3 +24,16 @@ jwt:
   refresh:
     expiration: ${JWT_REFRESH_EXPIRATION}
     header: Authorization-refresh
+
+ncloud:
+  accessKey: ${NCLOUD_ACCESS_KEY}
+  secretKey: ${NCLOUD_SECRET_KEY}
+  objectStorage:
+    bucket: ${OBJECT_STORAGE_BUCKET}
+  clovaSpeech:
+    secretKey: ${CLOVA_SECRET_KEY}
+    invokeUrl: ${CLOVA_INVOKE_URL}
+
+openai:
+  key: ${OPENAI_KEY}
+  model: ${OPENAI_MODEL}
