chore: OpenAI API 연동 파일

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -23,3 +23,7 @@ jwt:
   refresh:
     expiration: ${JWT_REFRESH_EXPIRATION}
     header: Authorization-refresh
+
+openai:
+  key: ${OPENAI_KEY}
+  model: ${OPENAI_MODEL}
