feat: redis를 이용한 대기열 구현

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,6 +14,10 @@ spring:
   data:
     mongodb:
       uri: ${MONGODB_URI_LOCAL}
+    redis:
+      host: ${REDIS_URI_LOCAL}
+      port: 6379
+      password: ${REDIS_PASSWORD_LOCAL}
 
 jwt:
   secretKey: ${JWT_SECRET_KEY}
