feat: firebase cloud messaging 요청 API 구현

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -41,3 +41,8 @@ ncloud:
 openai:
   key: ${OPENAI_KEY}
   model: ${OPENAI_MODEL}
+
+google:
+  authorizationCode: ${GOOGLE_AUTHORIZATION_CODE}
+  firebase:
+    projectId: ${FIREBASE_PROJECT}
