--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,11 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpmime:4.3.1'
     implementation 'com.google.code.gson:gson:2.8.9'
 
+    // Jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.15.2'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
