feat: 로그인, 회원가입 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,10 @@ spring:
   output:
     ansi:
       enabled: always
+logging:
+  level:
+    com.yl3k: debug
+    org.springframework.boot: DEBUG
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
