--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     // 웹소켓
-    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    //implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation group: 'com.corundumstudio.socketio', name: 'netty-socketio', version: '2.0.9'
 
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
