feat: 대기열 이벤트 별 메세지 전송 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,9 @@ spring:
   output:
     ansi:
       enabled: always
+server:
+  address: 0.0.0.0
+  port: 8080
 logging:
   level:
     com.yl3k: debug
